// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnackbarComponent SnackbarComponentが正常にrenderできることを確認: render直後 1`] = `
<View
  collapsable={false}
  style={
    {
      "bottom": 20,
      "flex": 1,
      "minHeight": 48,
      "opacity": 0,
      "paddingHorizontal": 10,
      "position": "absolute",
      "width": "100%",
    }
  }
  testID="snackbarAnimatedView"
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#393939",
        "borderRadius": 5,
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
    testID="snackbarStyleView"
  >
    <View
      style={
        {
          "flex": 1,
          "paddingLeft": 20,
          "paddingRight": 10,
          "paddingVertical": 20,
        }
      }
    >
      <Text
        style={
          {
            "color": "white",
          }
        }
      >
        テストメッセージ
      </Text>
    </View>
  </View>
</View>
`;

exports[`SnackbarComponent SnackbarComponentが正常にrenderできることを確認: フェードアウト後 1`] = `null`;

exports[`SnackbarComponent SnackbarComponentが正常にrenderできることを確認: フェードイン後 1`] = `
<View
  collapsable={false}
  style={
    {
      "bottom": 20,
      "flex": 1,
      "minHeight": 48,
      "opacity": 1,
      "paddingHorizontal": 10,
      "position": "absolute",
      "width": "100%",
    }
  }
  testID="snackbarAnimatedView"
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#393939",
        "borderRadius": 5,
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
    testID="snackbarStyleView"
  >
    <View
      style={
        {
          "flex": 1,
          "paddingLeft": 20,
          "paddingRight": 10,
          "paddingVertical": 20,
        }
      }
    >
      <Text
        style={
          {
            "color": "white",
          }
        }
      >
        テストメッセージ
      </Text>
    </View>
  </View>
</View>
`;
